fix: minor edits

--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
         <div class="container">
             <ul class="slider__list">
                 <li class="slider__item">
-                    <img class="slider__img slider__img--left"  src="./assets/img/iPhone Vertical.png" alt="">
-                    <img  class="slider__img slider__img--right"  src="./assets/img/iPhone Horizontal.png" alt="">
+                    <img class="slider__img slider__img--left" src="./assets/img/iPhone Vertical.png" alt="">
+                    <img class="slider__img slider__img--right" src="./assets/img/iPhone Horizontal.png" alt="">
                 </li>
             </ul>
-            <div class="slider__control">
-                <a href="#" class="control_prev"><img src="./assets/img/icons/btn-left.png" alt=""></a>
-                <a href="#" class="control_next"><img src="./assets/img/icons/btn-right.png" alt=""></a>
-            </div>
+            <a href="#" class="slider__control slider__control--left"><img src="./assets/img/icons/btn-left.png" alt=""></a>
+            <a href="#" class="slider__control slider__control--right"><img src="./assets/img/icons/btn-right.png" alt=""></a>
         </div>
     </section>
     <section class="singolo__services">
@@ -47,42 +45,42 @@
                     <figure>
                         <img src="./assets/img/icons/pen.png" alt="Custom Design">
                     </figure>
-                    <span class="services__item-title">Custom Design</span>
+                    <h4 class="services__item-title">Custom Design</h4>
                     <span class="services__item-description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</span>
                 </li>
                 <li class="services__item">
                     <figure>
                         <img src="./assets/img/icons/bulb.png" alt="Inovative Ideas">
                     </figure>
-                    <span class="services__item-title">Inovative Ideas</span>
+                    <h4 class="services__item-title">Inovative Ideas</h4>
                     <span class="services__item-description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</span>
                 </li>
                 <li class="services__item">
                     <figure>
-                    <img src="./assets/img/icons/heart.png" alt="Love Is The Answer">
+                        <img src="./assets/img/icons/heart.png" alt="Love Is The Answer">
                     </figure>
-                    <span class="services__item-title">Love Is The Answer</span>
+                    <h4 class="services__item-title">Love Is The Answer</h4>
                     <span class="services__item-description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</span>
                 </li>
                 <li class="services__item">
                     <figure>
-                    <img src="./assets/img/icons/phone.png" alt="Responsive Layout">
+                        <img src="./assets/img/icons/phone.png" alt="Responsive Layout">
                     </figure>
-                    <span class="services__item-title">Responsive Layout</span>
+                    <h4  class="services__item-title">Responsive Layout</h4>
                     <span class="services__item-description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</span>
                 </li>
                 <li class="services__item">
                     <figure>
-                    <img src="./assets/img/icons/bubble.png" alt="24 / 7 Support">
+                        <img src="./assets/img/icons/bubble.png" alt="24 / 7 Support">
                     </figure>
-                    <span class="services__item-title">24 / 7 Support</span>
+                    <h4 class="services__item-title">24 / 7 Support</h4>
                     <span class="services__item-description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</span>
                 </li>
                 <li class="services__item">
                     <figure>
                         <img src="./assets/img/icons/star.png" alt="Feel Like A Star">
                     </figure>
-                    <span class="services__item-title">Feel Like A Star</span>
+                    <h4 class="services__item-title">Feel Like A Star</h4>
                     <span class="services__item-description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</span>
                 </li>
             </ul>
