fix: rename files

--- a/singolo1.html
+++ b/singolo1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Singolo. Part 1</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./singolo1.css">
 </head>
 
 <body>
@@ -31,6 +31,7 @@
                     <img class="slider__img slider__img--left" src="./assets/img/iPhone Vertical.png" alt="">
                     <img class="slider__img slider__img--right" src="./assets/img/iPhone Horizontal.png" alt="">
                 </li>
+
             </ul>
             <a href="#" class="slider__control slider__control--left"><img src="./assets/img/icons/btn-left.png" alt=""></a>
             <a href="#" class="slider__control slider__control--right"><img src="./assets/img/icons/btn-right.png" alt=""></a>
