featt: add styles to portfolio block

--- a/singolo2.html
+++ b/singolo2.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Singalo</title>
     <link rel="stylesheet" href="./singalo2.css">
 </head>
 <body>
@@ -14,10 +14,10 @@
         <h2 class="portfolio__title singalo__title">Portfolio</h2>
         <p class="portfolio__description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         <ul class="portfolio__filter filter__items">
-            <li class="filter__item"><a href="#">All</a></li>
-            <li class="filter__item"><a href="#">Web Design</a></li>
-            <li class="filter__item"><a href="#">Graphic Design</a></li>
-            <li class="filter__item"><a href="#">Artwork</a></li>
+            <li class="filter__item"><a class="filter__link" href="#">All</a></li>
+            <li class="filter__item"><a class="filter__link" href="#">Web Design</a></li>
+            <li class="filter__item"><a class="filter__link" href="#">Graphic Design</a></li>
+            <li class="filter__item"><a class="filter__link" href="#">Artwork</a></li>
         </ul>
         <ul class="portfolio__items">
             <li class="portfolio__item">
@@ -92,34 +92,34 @@
             <li class="team__item">
                 <img src="./assets/team/AdamJensen.png" alt="Desmond Miles">
                 <h4 class="team__name">Adam Jensen</h4>
-                <p class="team__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
-                <ul class="team__links">
-                    <li class="team__link"><a href="#">f</a></li>
-                    <li class="team__link"><a href="#">g</a></li>
-                    <li class="team__link"><a href="#">t</a></li>
-                    <li class="team__link"><a href="#">in</a></li>
+                <p class="team__info">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                <ul class="team__social social__list">
+                    <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.svg" alt=""></a></li>
+                    <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google+.svg" alt=""></a></li>
+                    <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.svg" alt=""></a></li>
+                    <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.svg" alt=""></a></li>
                 </ul>
             </li>
             <li class="team__item">
                 <img src="./assets/team/DesmondMiles.png" alt="Desmond Miles">
                 <h4 class="team__name">Desmond Miles</h4>
-                <p class="team__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
-                <ul class="team__links">
-                    <li class="team__link"><a href="#">f</a></li>
-                    <li class="team__link"><a href="#">g</a></li>
-                    <li class="team__link"><a href="#">t</a></li>
-                    <li class="team__link"><a href="#">in</a></li>
+                <p class="team__info">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                <ul class="team__social social__list">
+                    <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.svg" alt=""></a></li>
+                    <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google+.svg" alt=""></a></li>
+                    <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.svg" alt=""></a></li>
+                    <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.svg" alt=""></a></li>
                 </ul>
             </li>
             <li class="team__item">
                 <img src="./assets/team/ScolaraVisari.png" alt="Scolara Visari">
                 <h4 class="team__name">Scolara Visari</h4>
-                <p class="team__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
-                <ul class="team__links">
-                    <li class="team__link"><a href="#">f</a></li>
-                    <li class="team__link"><a href="#">g</a></li>
-                    <li class="team__link"><a href="#">t</a></li>
-                    <li class="team__link"><a href="#">in</a></li>
+                <p class="team__info">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                <ul class="team__social social__list">
+                    <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.svg" alt=""></a></li>
+                    <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google+.svg" alt=""></a></li>
+                    <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.svg" alt=""></a></li>
+                    <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.svg" alt=""></a></li>
                 </ul>
             </li>
         </ul>
