fix: change change links to picturesÐ

--- a/singolo1.html
+++ b/singolo1.html
@@ -28,8 +28,8 @@
         <div class="container">
             <ul class="slider__list">
                 <li class="slider__item">
-                    <img class="slider__img slider__img--left" src="./assets/img/iPhone Vertical.png" alt="">
-                    <img class="slider__img slider__img--right" src="./assets/img/iPhone Horizontal.png" alt="">
+                    <img class="slider__img slider__img--left" src="assets/img/iPhoneVertical.png" alt="">
+                    <img class="slider__img slider__img--right" src="assets/img/iPhoneHorizontal.png" alt="">
                 </li>
 
             </ul>
