--- a/singolo2.html
+++ b/singolo2.html
@@ -22,62 +22,62 @@
         <ul class="portfolio__items">
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-1.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-1.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-2.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-2.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-3.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-3.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-4.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-4.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-5.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-5.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-6.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-6.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-7.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-7.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-8.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-8.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-9.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-9.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-10.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-10.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-11.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-11.png" alt="">
                 </a>
             </li>
             <li class="portfolio__item">
                 <a class="portfolio__link" href="#">
-                    <img class="portfolio__img" src="./assets/potrfolio/Project-12.png" alt="">
+                    <img class="portfolio__img" src="assets/img/potrfolio/Project-12.png" alt="">
                 </a>
             </li>
         </ul>
@@ -90,7 +90,7 @@
         <p class="team__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
         <ul class="team__items">
             <li class="team__item">
-                <img src="./assets/team/AdamJensen.png" alt="Desmond Miles">
+                <img src="assets/img/team/AdamJensen.png" alt="Desmond Miles">
                 <h4 class="team__name">Adam Jensen</h4>
                 <p class="team__info">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
                 <ul class="team__social social__list">
@@ -101,7 +101,7 @@
                 </ul>
             </li>
             <li class="team__item">
-                <img src="./assets/team/DesmondMiles.png" alt="Desmond Miles">
+                <img src="assets/img/team/DesmondMiles.png" alt="Desmond Miles">
                 <h4 class="team__name">Desmond Miles</h4>
                 <p class="team__info">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                 <ul class="team__social social__list">
@@ -112,7 +112,7 @@
                 </ul>
             </li>
             <li class="team__item">
-                <img src="./assets/team/ScolaraVisari.png" alt="Scolara Visari">
+                <img src="assets/img/team/ScolaraVisari.png" alt="Scolara Visari">
                 <h4 class="team__name">Scolara Visari</h4>
                 <p class="team__info">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
                 <ul class="team__social social__list">
