fix: change change links to pictures

--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                 <h4 class="team__name">Adam Jensen</h4>
                 <p class="team__info">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
                 <ul class="team__social social__list">
-                    <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.png" alt=""></a></li>
-                    <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google.png" alt=""></a></li>
-                    <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.png" alt=""></a></li>
-                    <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.png" alt=""></a></li>
+                    <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.svg" alt=""></a></li>
+                    <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google.svg" alt=""></a></li>
+                    <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.svg" alt=""></a></li>
+                    <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.svg" alt=""></a></li>
                 </ul>
             </li>
             <li class="team__item">
@@ -184,10 +184,10 @@
                 <h4 class="team__name">Desmond Miles</h4>
                 <p class="team__info">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                 <ul class="team__social social__list">
-                    <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.png" alt=""></a></li>
-                    <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google.png" alt=""></a></li>
-                    <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.png" alt=""></a></li>
-                    <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.png" alt=""></a></li>
+                    <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.svg" alt=""></a></li>
+                    <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google.svg" alt=""></a></li>
+                    <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.svg" alt=""></a></li>
+                    <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.svg" alt=""></a></li>
                 </ul>
             </li>
             <li class="team__item">
@@ -195,10 +195,10 @@
                 <h4 class="team__name">Scolara Visari</h4>
                 <p class="team__info">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
                 <ul class="team__social social__list">
-                    <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.png" alt=""></a></li>
-                    <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google.png" alt=""></a></li>
-                    <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.png" alt=""></a></li>
-                    <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.png" alt=""></a></li>
+                    <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.svg" alt=""></a></li>
+                    <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google.svg" alt=""></a></li>
+                    <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.svg" alt=""></a></li>
+                    <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.svg" alt=""></a></li>
                 </ul>
             </li>
         </ul>
@@ -237,10 +237,10 @@
     <div class="container">
         <p class="copyright__text">© Copyright 2013 ∙ by PSDchat.comq</p>
         <ul class="copyright__social social__list">
-            <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.png" alt=""></a></li>
-            <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google.png" alt=""></a></li>
-            <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.png" alt=""></a></li>
-            <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.png" alt=""></a></li>
+            <li class="social__item social__item--fb"><a class="social__link" href="#"><img src="./assets/img/icons/facebook.svg" alt=""></a></li>
+            <li class="social__item social__item--g"><a class="social__link" href="#"><img src="./assets/img/icons/google.svg" alt=""></a></li>
+            <li class="social__item social__item--tw"><a class="social__link" href="#"><img src="./assets/img/icons/twitter.svg" alt=""></a></li>
+            <li class="social__item social__item--in"><a class="social__link" href="#"><img src="./assets/img/icons/linkedin.svg" alt=""></a></li>
         </ul>
     </div>
 </footer>
