fix: fix slider

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 </header>
 
-<section class="singolo__slider">
+<!-- <section class="singolo__slider">
     <div class="container">
         <ul class="slider__list">
             <li class="slider__item">
@@ -47,7 +47,36 @@
         <a href="#" class="slider__control slider__control--left"><img src="./assets/img/icons/btn-left.png" alt=""></a>
         <a href="#" class="slider__control slider__control--right"><img src="./assets/img/icons/btn-right.png" alt=""></a>
     </div>
-</section>
+</section> -->
+<div id="slider" class="slider">
+    <div class="wrapper">
+      <div id="slides" class="slides">
+        <div class="slide">
+            <div class="container">
+                <span class="img-wrapper">
+                    <img class="slider__img slider__img--left" src="./assets/img/iPhoneVertical.png" alt="">
+                    <span class="lcd__phone lcd__phone--left"></span>
+                    <button class="btn__phone btn__phone--left"></button>
+                </span>
+                <span class="img-wrapper">
+                    <img class="slider__img slider__img--right" src="./assets/img/iPhoneHorizontal.png" alt="">
+                    <span class="lcd__phone lcd__phone--right"></span>
+                    <button class="btn__phone  btn__phone--right"></button>
+                </span>
+            </div>
+        </div>
+        <div class="slide slide-blue">
+            <div class="container">
+                <img class="slider__img slider__img--left" src="./assets/img/slide2.png" alt="">
+            </div>
+        </div>
+      </div>
+    </div>
+    <a class="slider__control slider__control--left"><img src="./assets/img/icons/btn-left.png" alt=""></a>
+    <a class="slider__control slider__control--right"><img src="./assets/img/icons/btn-right.png" alt=""></a>
+  </div>
+
+
 <section class="singolo__services" id='services'>
     <div class="container">
         <h2 class="services__title singalo__title"> Our Services</h2>
