--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
         <h2 class="portfolio__title singalo__title">Portfolio</h2>
         <p class="portfolio__description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         <ul class="portfolio__filter filter__items">
-            <li class="filter__item"><a class="filter__link filter__link--active" onclick="filterSelection('all')">All</a></li>
-            <li class="filter__item"><a class="filter__link" onclick="filterSelection('portfolio__item-web')">Web Design</a></li>
-            <li class="filter__item"><a class="filter__link" onclick="filterSelection('portfolio__item-graphic')">Graphic Design</a></li>
-            <li class="filter__item"><a class="filter__link" onclick="filterSelection('portfolio__item-artwork')">Artwork</a></li>
+            <li class="filter__item"><a class="filter__link filter__link--active">All</a></li>
+            <li class="filter__item"><a class="filter__link">Web Design</a></li>
+            <li class="filter__item"><a class="filter__link">Graphic Design</a></li>
+            <li class="filter__item"><a class="filter__link">Artwork</a></li>
         </ul>
         <ul class="portfolio__items">
             <li class="portfolio__item portfolio__item-artwork">
