feat: shuffle added to portfolio

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 <div class="modalwrapper">
 
 </div>
-    
+<button class="close button-ok">Ок</button>
 </div>
 
 <script src="./script.js"></script>
